--- a/backend/package.json
+++ b/backend/package.json
@@ -19,12 +19,14 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.4"
   },
   "devDependencies": {
     "@eslint/create-config": "^1.2.0",
     "@eslint/js": "^9.7.0",
     "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
     "@typescript-eslint/parser": "^7.17.0",
     "eslint": "^8.57.0",
