--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@eslint/create-config": "^1.2.0",
     "@eslint/js": "^9.7.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/http-errors": "^2.0.4",
     "@types/morgan": "^1.9.9",
